# music_player_cli

./: .gitignore  LICENSE  PKG-INFO  README.md  audio_player.ps1  getmusic.py  headers_auth.json  mp.py  play_history.txt  pyproject.toml  requirements.txt  results.json  setup.py
spci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spci/: getmusic.py  mp.py  play_history.txt  requirements.txt
src/spci_sonic_pulse.egg-info/: PKG-INFO
