[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spci-sonic-pulse"
version = "2.0.8"
description = "A CLI music player"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "rich",
    "requests",
    "yt-dlp",
    "python-vlc",
    "ytmusicapi",
    "tinydb",
]

[project.scripts]
spci = "spci.mp:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
