[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spci-sonic-pulse"
version = "2.0.9"
description = "A CLI music player"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Development Status :: 5 - Production/Stable",
]
keywords = ["music-player", "cli", "terminal", "youtube", "audio", "rich-ui", "sonic-pulse"]
dependencies = [
    "typer",
    "rich",
    "requests",
    "yt-dlp",
    "python-vlc",
    "ytmusicapi",
    "tinydb",
]

[project.scripts]
spci = "spci.mp:app"

[project.urls]
Homepage = "https://github.com/ojaswi1234/music_player_cli"
Issues = "https://github.com/ojaswi1234/music_player_cli/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


